--- a/DocumentiInterni/Verbali/Verbale_I_2021-02-25/src/Comandi.tex
+++ b/DocumentiInterni/Verbali/Verbale_I_2021-02-25/src/Comandi.tex
@@ -1,10 +1,10 @@
 \newcommand{\Titolo}{Verbale interno del 2021-02-25}
 
-\newcommand{\Approvatore}{}
+\newcommand{\Approvatore}{Edoardo Caregnato}
 \newcommand{\Redattori}{Giovanni Grigoletto}
-\newcommand{\Verificatori}{}
+\newcommand{\Verificatori}{Elvis Murtezan}
 
-\newcommand{\pathimg}{../Shared/logo.png}
+\newcommand{\pathimg}{../../../Shared/logo.png}
 
 \newcommand{\Versionedoc}{1.0.0}
 
