--- a/DocumentiInterni/Verbali/Verbale_I_2021-02-25/main.tex
+++ b/DocumentiInterni/Verbali/Verbale_I_2021-02-25/main.tex
@@ -1,6 +1,6 @@
 \documentclass[a4paper, oneside, openany, dvipsnames, table]{article}
 \usepackage[utf8]{inputenc}
-\usepackage{../Shared/Sweleven}
+\usepackage{../../../Shared/Sweleven}
 \input{src/Comandi.tex}
 
 \begin{document}
