--- a/DocumentiInterni/Verbali/Verbale_I_2021-02-25/src/RegistroModifiche.tex
+++ b/DocumentiInterni/Verbali/Verbale_I_2021-02-25/src/RegistroModifiche.tex
@@ -13,8 +13,8 @@
         % usare \responsabile per indicare responsabile
 
         %		L'ultimo evento deve essere sempre all'inizio della tabella
-        X.X.X                  & XXXX-XX-XX                                       & Responsabile                                & TODO & \responsabile{} \\
-        X.X.X                  & XXXX-XX-XX                                       & Verifica                                    & TODO & \verificatore{} \\
+        1.0.0                  & 2021-02-27                                       & Approvazione                                & Edoardo Caregnato & \responsabile{} \\
+        0.1.0                  & 2021-02-26                                       & Verifica                                    & Elvis Murtezan & \verificatore{} \\
         0.0.1                  & 2021-02-25                                       & Stesura verbale                           & Giovanni Grigoletto & \redattore{}    \\
     \end{longtable}
 }
