New Changelog PdP
è già possibile fare una correzione del PdP perchè le modifiche ed i aggiornamenti richiesti sono minimali o strutturali(spostare quello che c'è già scritto)
TODO:
-spostare i consuntivi di periodo nel capitolo(nuovo) consuntivo di periodo
-manca da mettere i requisiti soddisfatti negli incrementi definiti in appendice
-mettere una tabella nel consuntivo di periodo relativo alla progettazione(non strettamente necessaria) dei costi parziali

--- a/DocumentiEsterni/PianoDiProgetto/src/Preventivo/main.tex
+++ b/DocumentiEsterni/PianoDiProgetto/src/Preventivo/main.tex
@@ -24,8 +24,9 @@ Sigle identificative per i ruoli indicati nelle tabelle e nei grafici:
 \input{./src/Preventivo/src/Preventivo/PreventivoAnalisi.tex}
 \input{./src/Preventivo/src/Preventivo/PreventivoProgettazione.tex}
 \input{./src/Preventivo/src/Consuntivo/ConsuntivoProgettazione.tex}
-\input{./src/Preventivo/src/Preventivo/PreventivoCodifica.tex}
 
+\section{Preventivo a finire}
+\input{./src/Preventivo/src/Preventivo/PreventivoCodifica.tex}
 \input{./src/Preventivo/src/Preventivo/PreventivoCollaudo.tex}
 
 \input{./src/Preventivo/src/Preventivo/PreventivoFinale.tex}
