--- a/DocumentiEsterni/PianoDiProgetto/src/Preventivo/src/Preventivo/PreventivoFinale.tex
+++ b/DocumentiEsterni/PianoDiProgetto/src/Preventivo/src/Preventivo/PreventivoFinale.tex
@@ -1,4 +1,4 @@
-\subsection{Preventivo finale} 
+\subsection{Preventivo a finire completo} 
 Nel preventivo riportiamo la spesa totale che il committente dovrà affrontare, derivata dal totale delle ore rendicontate e preventivate nelle fasi di Progettazione, Sviluppo,Collaudo.
 
 \subsubsection{Divisione oraria complessiva} 
@@ -20,14 +20,14 @@ La seguente tabella rappresenta la distribuzione oraria dei ruoli per ogni compo
 \textcolor{\secondaryColor}{\textbf{Ore complessive}}\\	
 \endhead
 
-\AW{}                     &  10 & 5 & - & 30 & 27 & 32 & 104 \\
-\AT{}                     & 11 & 10 & 5 & 22 & 22 & 35 & 105 \\
-\AD{}                     & 10 & 10 & - & 14 & 34 & 34 & 102 \\
-\EC{}                     & 11 & 10 &  6 & 13 & 32 & 32 & 104 \\
-\EM{}                     & - & 8  &  7 & 17 & 40 & 32 & 104 \\
-\FP{}                     & 10 & 8  &  6 & 21 & 35 & 24 & 104 \\
-\GG{}                     &  - & 8  & 5 & 25 & 37 & 29 & 104 \\
-\textbf{Ore totali ruolo} & 52  & 59 & 29 & 142 & 227 & 218 & 727 \\
+\AW{}                     & - & 5 & 10 & 30 & 25 & 32 & 102 \\
+\AT{}                     & 11 & 10 & 15 & 15 & 22 & 28 & 101 \\
+\AD{}                     & 10 & 10 & - & 12 & 38 & 32 & 102 \\
+\EC{}                     & 11 & 10 &  11 & 13 & 23 & 32 & 100 \\
+\EM{}                     & 10 & 8  &  0 & 17 & 38 & 30 & 103 \\
+\FP{}                     & 10 & 8  &  0 & 23 & 34 & 27 & 102 \\
+\GG{}                     &  - & 8  & 9 & 23 & 35 & 27 & 102 \\
+\textbf{Ore totali ruolo} & 52  & 59 & 45 & 133 & 215 & 208 & 712 \\
 \end{longtable}
 }
 
