--- a/DocumentiEsterni/PianoDiProgetto/src/AnalisiRischi/src/OccorrenzaRischi.tex
+++ b/DocumentiEsterni/PianoDiProgetto/src/AnalisiRischi/src/OccorrenzaRischi.tex
@@ -55,5 +55,34 @@ Di seguito viene stilata una tabella parziale, soggetta ad aggiornamenti progres
         media &
         In qualche caso la redazone di alcuni documenti si è protratta oltre il tempo prestabilito per ultimare gli stessi, ritardando così i tempi per la loro validazione. Fortunatamente i ritardi non sono stati eccessivi e si è riusciti ugualmente a completare i lavori entro i tempi stabiliti, senza particolari complicazioni. È stato in ogni caso fatto presente tra i membri del gruppo.\\
         \hline
+        RPa &
+        progettazione &
+        1,2 & 
+        alta &
+        i membri del team sono stati impegnati in altri progetti personali, che hanno portato a una ripianificazione ed a concordare una nuova data col committente a cui presentare l'andamento dei lavori.\\
+        \hline
+        ROc &
+        progettazione &
+        1 & 
+        bassa &
+        sono state fatte sia sovrastime che sottostime ma si è ripianificato in tempo per ammortizzare il carico di lavoro medio\\
+        \hline
+        RSa &
+        progettazione &
+        1 & 
+        bassa &
+        la maggior parte del team ha segnalato subito all'inizio di tale fase che ci sarebbere stato tale rischio ed ha pianificato di conseguenza. \\
+        \hline
+        RRa &
+        progettazione &
+        1 & 
+        bassa & 
+        è stato chiaro fin da subito alla maggior parte del team che doveva essere fatta un analisi più approfondita,ciò ha influito in una ripianificazione oraria e ricollocazione delle risorse.\\
+        \hline
+        RTa &
+        progettazione &
+        1,2,3 & 
+        alta &
+        gli impegni personali(ROc) ed al contempo imparare le tecnologie rischieste ha portato ad un alto stress nel gruppo, non ha influito grazie alla ripianificazione della fase relativa. \\
     \end{longtable}
 }
