--- a/DocumentiEsterni/PianoDiProgetto/src/Preventivo/src/Consuntivo/ConsuntivoProgettazione.tex
+++ b/DocumentiEsterni/PianoDiProgetto/src/Preventivo/src/Consuntivo/ConsuntivoProgettazione.tex
@@ -1,5 +1,9 @@
 \subsubsection{Bilancio investimento fase di progettazione}
 Il bilancio della fase di progettazione è positivo,il gruppo ha impiegato meno ore di quelle preventivate inzialmente,ma sono stati riscontrati diversi problemi.\\
+È stato cruciale fare un analisi critica della fase precedente e dei rischi che ne possono derivare,sono stati riscontrati rischi che hanno influito nella ripianificazione della fase di progettazione.
+Il team ha concordato ad unanimità di ruotare i ruoli in modo solo parziale e lasciare la progettazione architetturale e lo sviluppo relativo al PoC a membri con un'esperienza
+maggiore nelle relative tecnologie conivolte.
+Per la lista dei rischi riscontrati si rimanda alla appendice dove si trova alla \hyperlink{Tabellaoccorrenzarischi}{tabella dell'occorrenza dei rischi} in appendice.
 La seguente tabella illustra la differenza oraria ed economica rilevata a posteriori.
 {
 \rowcolors{2}{\evenRowColor}{\oddRowColor}
@@ -15,31 +19,27 @@ La seguente tabella illustra la differenza oraria ed economica rilevata a poster
 \textcolor{\secondaryColor}{\textbf{Costo effettivo (in \euro{})}} & 
 \textcolor{\secondaryColor}{\textbf{Variazione di costo (in \euro{})}}\\	
 	
-Responsabile    &  21 & 0 & 630 & 630 &  0 \\
+Responsabile    &  19 & 0 & 630 & 570 &  0 \\
 Amministratore  &  20 & 0 & 400 & 400 & 0 \\
 Analista        & 24 & +16 & 600 & 1000 & +400 \\
 Progettista     &  49 & 9 & 1078 & 880 & -198 \\
 Programmatore   &   58 & -12 & 870 &  690 & -180 \\
 Verificatore    &  59 &  -10 & 885 & 735 & -150 \\
-\textbf{Totale} & 231 & 20 & 4575 & 4400 & -128 \\	
-
+\textbf{Totale} & 231 & 20 & 4463 & 4335 & -128 \\	
 \end{longtable}
 }
+ Nel seguente istogramma viene rappresentata la ridistribuzione oraria e delle responsabilità(come si può notare alcuni membri del team non hanno ruotato come concordato dal team):\\
+\includegraphics[width=1\textwidth]{./src/Preventivo/src/img/istoConsuntivoProgettazioneRuoli.png}
 
 \subsubsection{Conclusioni}
 Come riportato dalla tabella, il bilancio risulta essere positivo per i seguenti motivi:
 \begin{itemize}
-	\item \textbf{Responsabile}: {essendo il team abbastanza coeso la maggior parte del tempo è stato dedicato al PdP;}
+	\item \textbf{Responsabile}: {essendo il team abbastanza coeso la maggior parte del tempo è stata dedicato al PdP;}
 	\item \textbf{Amministratore}: {la collaborazione tra membri del team in questo ruolo è risultata soddisfaciente;}
 	\item \textbf{Analista}: {Dopo l'aggiudicazione del capitolato il team si è reso conto che la documentazione presente nell'AdR presentava diverse lacune, ciò ha portato a un incremento orario per tale ruolo;}
 	\item \textbf{Progettista}: {Grazie all'esperienza dei membri e alla chiarezza dei requisiti si è riuscito a mitigare il numero di ore neccessarie a progettare il PoC, ammortizzando il costo orario dell'analista;}
 	\item \textbf{Programmatore}: {Grazie all'esperienza dei membri e alla chiarezza dei requisiti si è riuscito a mitigare il numero di ore neccessarie allo sviluppo del PoC, ammortizzando il costo orario dell'analista;}
 	\item \textbf{Verificatore}: {Avendo più esperienza con le tecnologie richieste(alla documentazione in particolare), il numero di ore è inferiore a quelle preventivate.}
 \end{itemize}
-La suddivisione a periodi di una fase permette di migliorare la produttività del team incrementalmente, visto che viene effettuato un check intermedio sostanziale alla fine di uno periodo:
-\begin{itemize}
-	\item Dai \textbf{verificatori}, che validano i deliverables relativi a quello periodo;
-	\item E dal \textbf{responsabile}, che verifica la presenza di eventuali problematiche e si attiva nel risolverle.
-\end{itemize}
 L'esperienza e la coesione maturata saranno cruciale nel cercare di mitigare il numero di ore richieste,visti i scostamenti orari in particolare dell'analista rispetto al preventivo iniziale, che hanno portato ad una riduzione oraria complessiva di ciascun membro.
-Visti i problemi riscontrati nel bilancio della fase di progettazione, il costo totale del preventivo a finire rimarrà invariato, per mitigare eventuali problemi di pianificazione oraria(come quello riscontrato in tale fase).
+Visti i problemi riscontrati nel bilancio della fase di progettazione, il costo totale del preventivo a finire rimarrà invariato, per mitigare eventuali rischi(come quelli riscontrati in tale fase).
