--- a/DocumentiEsterni/PianoDiProgetto/src/Preventivo/src/Consuntivo/ConsuntivoProgettazione.tex
+++ b/DocumentiEsterni/PianoDiProgetto/src/Preventivo/src/Consuntivo/ConsuntivoProgettazione.tex
@@ -41,5 +41,6 @@ Come riportato dalla tabella, il bilancio risulta essere positivo per i seguenti
 	\item \textbf{Programmatore}: {Grazie all'esperienza dei membri e alla chiarezza dei requisiti si è riuscito a mitigare il numero di ore neccessarie allo sviluppo del PoC, ammortizzando il costo orario dell'analista;}
 	\item \textbf{Verificatore}: {Avendo più esperienza con le tecnologie richieste(alla documentazione in particolare), il numero di ore è inferiore a quelle preventivate.}
 \end{itemize}
+\subsubsection{Ragionamento sugli scostamenti futuri}
 L'esperienza e la coesione maturata saranno cruciale nel cercare di mitigare il numero di ore richieste,visti i scostamenti orari in particolare dell'analista rispetto al preventivo iniziale, che hanno portato ad una riduzione oraria complessiva di ciascun membro.
-Visti i problemi riscontrati nel bilancio della fase di progettazione, il costo totale del preventivo a finire rimarrà invariato, per mitigare eventuali rischi(come quelli riscontrati in tale fase).
+Visti i problemi riscontrati nel bilancio della fase di progettazione, il costo totale del preventivo a finire rimarrà invariato, per mitigare eventuali rischi(come quelli riscontrati in tale fase) o investirli nell'implementazione di requisiti desiderabili o facoltativi.
