--- a/DocumentiEsterni/Verbali/Verbale Esterno 2021-01-22/src/Comandi.tex
+++ b/DocumentiEsterni/Verbali/Verbale Esterno 2021-01-22/src/Comandi.tex
@@ -1,6 +1,6 @@
 \newcommand{\Titolo}{Verbale esterno del 2021-01-22}
 
-\newcommand{\Approvatore}{Abdelwahad Kandoul}
+\newcommand{\Approvatore}{Edoardo Caregnato}
 \newcommand{\Redattori}{Giovanni Grigoletto}
 \newcommand{\Verificatori}{Filippo Pinton}
 
