--- a/DocumentiEsterni/Verbali/Verbale Esterno 2021-01-22/src/RegistroModifiche.tex
+++ b/DocumentiEsterni/Verbali/Verbale Esterno 2021-01-22/src/RegistroModifiche.tex
@@ -13,7 +13,7 @@
         % usare \responsabile per indicare responsabile
 
         %		L'ultimo evento deve essere sempre all'inizio della tabella
-        1.0.0                  & 2021-01-26                                       & Approvazione                                & Abdelwahad Kandoul & \responsabile{} \\
+        1.0.0                  & 2021-01-26                                       & Approvazione                                & Edoardo Caregnato & \responsabile{} \\
         0.1.0                  & 2021-01-24                                       & Verifica                                    & Filippo Pinton & \verificatore{} \\
         0.0.1                  & 2021-01-22                                       & Stesura verbale                           & Giovanni Grigoletto & \redattore{}    \\
     \end{longtable}
