--- a/DocumentiInterni/Verbali/Verbale_I_2021-02-25/src/DettaglioRiunione/main.tex
+++ b/DocumentiInterni/Verbali/Verbale_I_2021-02-25/src/DettaglioRiunione/main.tex
@@ -4,17 +4,17 @@ Principali argomenti affrontati:
     \item \textbf{Aspetti ancora poco chiari}:
         \begin{itemize}
             \item ritenuto necessario effettuare un ulteriore ricevimento con il Prof. Cardin (svoltosi lo stesso giorno, prima di questo incontro) per comprendere meglio alcuni aspetti relativi ai casi d'uso;
-            \item discussione collettiva sui chiarimenti ricevuti, informando i membri non presenti al ricevimento;
+            \item discussione collettiva sui chiarimenti ricevuti, informando i membri non presenti al ricevimento.
         \end{itemize}
     \item \textbf{Quadro generale}:
         \begin{itemize}
             \item discussione sul materiale necessario al colloquio di \glo{technology baseline};
-            \item breve valutazione sullo stato dei documenti e del \glo{proof of concept}; 
+            \item breve valutazione sullo stato dei documenti e del \glo{proof of concept}.
         \end{itemize}
     \item \textbf{Definizione del lavoro rimanente per questa fase}:
         \begin{itemize}
             \item stilato un resoconto delle correzioni e degli aggiornamenti necessari a tutta la documentazione redatta finora;
-            \item valutate le tempistiche necessarie per giungere all'incontro formale sulla \glo{technology baseline} con il Prof. Cardin.
+            \item valutate le tempistiche necessarie per giungere all'incontro formale sulla \glo{technology baseline} con il Prof. Cardin;
             \item definiti gli obiettivi necessari per giungere alla \RP.
         \end{itemize}
 \end{enumerate}
