--- a/DocumentiEsterni/PianoDiProgetto/main.tex
+++ b/DocumentiEsterni/PianoDiProgetto/main.tex
@@ -41,7 +41,7 @@
 
     \section{Modello di sviluppo}\label{sec:Modello-sviluppo}
     \input{src/ModelloSviluppo/main.tex}
-
+    \newpage
     \section{Pianificazione}\label{sec:Pianificazione}
     \input{src/Pianificazione/main.tex}
 
@@ -51,7 +51,7 @@
     %\newpage
     %\section{Consuntivo Periodo}\label{sec:Consuntivo-periodo}
     %\input{src/ConsuntivoPeriodo/main.tex}
-
+    \newpage
     \section{Organigramma}\label{sec:Organigramma}
     \input{src/Organigramma/main.tex}
     \setcounter{secnumdepth}{0}
