--- a/DocumentiEsterni/PianoDiProgetto/src/ModelloSviluppo/src/Motivazioni.tex
+++ b/DocumentiEsterni/PianoDiProgetto/src/ModelloSviluppo/src/Motivazioni.tex
@@ -1,23 +1,26 @@
-La scelta di tale modello porta i seguenti pro e contro:\\
+Il modello incrementale presenta i seguenti pro e contro:\\
 \subsubsection{\textbf{Pro}}
 \begin{itemize}
     \item facilita la generazione di software funzionante in modo rapido e precoce durante il ciclo di vita del software.
     \item riduce i costi di consegna iniziale;
-    \item È più facile testare ed eseguire il debug durante un'iterazione piccola;
-    \item le \glo{risorse} con le skills necessarie non sono disponibili
-    \item più facile gestire il rischio perché i pezzi rischiosi vengono identificati e gestiti durante l'iterazione
+    \item è più facile testare ed eseguire il debug durante un'iterazione breve;
+    \item aiuta anche i collaboratori con meno esperienza e abilità favorendo l'apprendimento graduale;
+    \item più facile gestire il rischio poiché le parti più complesse vengono identificate e gestite durante l'iterazione;
     \item in questo modello il proponente può dare un feedback ad ogni build.
 \end{itemize}
+
 \subsubsection{\textbf{Contro}}
 \begin{itemize}
-    \item Ha bisogno di una buona pianificazione e design;
-    \item Ha bisogno di una definizione chiara e completa dell'intero sistema prima che possa essere scomposto e costruito in modo incrementale.
+    \item richiede una buona pianificazione e \glo{design};
+    \item necessita di una definizione chiara e completa dell'intero sistema prima che possa essere scomposto e costruito in modo incrementale;
+    \item è richiesta molta esperienza nell'applicazione del modello (che il gruppo sta ancora maturando) per la sua completa padronanza.
 \end{itemize}
+
 \subsubsection{\textbf{Conclusione}}
 Questa metodologia è risultata quindi ideale perchè:
 \begin{itemize}
-    \item il livello  di esperienza del gruppo \Gruppo{} è mediamente limitato;
-    \item la maggior parte dei requisiti del capitolato C1 sono chiari e ben definiti;
-    \item è necessario(potenzialmente) immettere in anticipo un prodotto sul mercato(visto il contesto del capitolato C1);
-    \item l'azienda proponente \proponente{},si è dimostrata aperta al dialogo, dando la possibilita di contrattare modifiche ai \glo{requisiti} , qualora giustificati;
+    \item è necessario immettere il prima possibile il prodotto sul mercato, considerato il contesto e la possibile concorrenza nello sviluppo di applicazioni simili a quella proposta dal capitolato C1;
+    \item la maggior parte dei requisiti presentati nel capitolato C1 sono chiari e ben definiti;
+    \item il gruppo ha dimostrato uno spiccato interesse per l'applicazione di tale modello nonostante la scarsa esperienza, poiché l'obiettivo preposto è ambizioso e stimolante;
+    \item l'azienda proponente \proponente{}, si è dimostrata aperta al dialogo, dando la possibilita di contrattare eventuali modifiche ai \glo{requisiti}, qualora giustificate.
 \end{itemize}
