--- a/DocumentiEsterni/PianoDiProgetto/src/Pianificazione/main.tex
+++ b/DocumentiEsterni/PianoDiProgetto/src/Pianificazione/main.tex
@@ -5,8 +5,8 @@ Nella pianificazione vengono definiti tutti i passi necessari alla conclusione d
 
 \subsection{Strutturazione}\label{sec:Strutturazione}
 \input{src/Pianificazione/src/Strutturazione.tex}
-
-\subsection{Fase di Analisi- }\label{sec:Periodo 1 Analisi}
+\newpage
+\subsection{Fase di Analisi}\label{sec:Periodo 1 Analisi}
 \input{src/Pianificazione/src/Stadio1.tex}
 \subsection{Diagramma di Gantt delle attività della fase di Analisi}\label{sec:Gant Analisi}
 \input{src/Pianificazione/src/GanttAnalisi.tex}
