--- a/DocumentiEsterni/PianoDiProgetto/src/Pianificazione/src/Considerazioni.tex
+++ b/DocumentiEsterni/PianoDiProgetto/src/Pianificazione/src/Considerazioni.tex
@@ -1,2 +1,2 @@
-Nel corso delle varie fasi il gruppo non mancherà di restare, ogni qualvolta necessario, in contatto con l'azienda proponente \proponente{}, per poter così chiarire dubbi o accordarsi su eventuali modifiche da poter apportare ad alcuni \glo{requisiti}.\\
-Si ricorda inoltre che coerentemente con il modello scelto, lo sviluppo in genere avverrà in modo incrementale, perciò, oltre ad una preventiva organizzazione delle parti, si procederà sempre all'implementazione per aggiunte e/o modifiche successive, secondo incrementi stabiliti e cercando ogni volta di garantire un sistema funzionante.
+Nel corso delle varie fasi il gruppo non mancherà di restare, ogniqualvolta necessario, in contatto con l'azienda proponente \proponente{} per poter così chiarire dubbi o accordarsi su eventuali modifiche da poter apportare ad alcuni \glo{requisiti}.\\
+Si ricorda inoltre che, coerentemente con il modello scelto, si cercherà di seguire uno sviluppo di tipo incrementale. Pertanto, oltre ad una preventiva organizzazione delle parti, si procederà sempre all'implementazione per aggiunte e/o modifiche successive secondo incrementi stabiliti. Inoltre si cercherà di garantire ogni volta lo sviluppo di una versione stabile del prodotto.
