--- a/DocumentiEsterni/PianoDiProgetto/src/Pianificazione/src/Stadio1.tex
+++ b/DocumentiEsterni/PianoDiProgetto/src/Pianificazione/src/Stadio1.tex
@@ -1,5 +1,5 @@
 
-        \subsubsection{Periodo 1 fase di analisi}
+        \subsubsection{Periodo 1 - Fase di analisi}
     In questa periodo i membri del gruppo si conoscono, prendono le decisioni iniziali, valutano i capitolati, discutono sulle modalità di lavoro da adottare ed avviano la redazione dei primi documenti interni.
         \begin{itemize}
             \item \textbf{intervallo: }22 ottobre 2020 - 3 dicembre 2020;
@@ -11,7 +11,7 @@
                     \end{itemize}
             \item \textbf{Obiettivi}
             \begin{itemize}
-                \item presentazione team
+                \item presentazione team;
                 \item scelta degli strumenti ed organizzazione dell'ambiente di lavoro;
                 \item scelta del nome del gruppo;
                 \item approfondimento, sia individuale che collettivo, degli strumenti scelti e dei capitolati proposti;
@@ -20,7 +20,7 @@
             \end{itemize}
         \end{itemize}
         
-        \subsubsection{Periodo 2 fase di analisi}
+        \subsubsection{Periodo 2 - Fase di analisi}
         Svolte le attività preliminari, il gruppo si concentra più in dettaglio sull'analisi del capitolato scelto e redige una prima stesura della documentazione esterna. 
         L'obiettivo principale di questa \glo{fase} è produrre la documentazione richiesta per il primo \glo{incontro formale} 
         di revisione programmato. La positiva conclusione di questo periodo corrisponde di fatto alla prima \glo{milestone} ufficiale del gruppo.
