--- a/DocumentiEsterni/PianoDiProgetto/src/Pianificazione/src/Strutturazione.tex
+++ b/DocumentiEsterni/PianoDiProgetto/src/Pianificazione/src/Strutturazione.tex
@@ -1,5 +1,5 @@
-Di seguito viene riportata la struttura generale in cui verrà organizzato l'intero \glo{processo} di lavoro. In questo caso sono stati specificati in totale sette \glo{periodi} raggruppati essenzialmente in quattro \glo{fasi}. Per ogni periodo vengono individuati quelli che attualmente sono gli obiettivi che il gruppo \Gruppo{} si prefigge di raggiungere entro la data indicata di fine dello stesso. Nei successivi paragrafi verrà descritto ogni periodo più nel dettaglio.\\
-Qui sotto viene esposto sinteticamente lo schema generale, dove ogni periodo è concettualmente collocato all'interno della rispettiva fase:
+Di seguito viene riportata la struttura generale in cui verrà organizzato l'intero \glo{processo} di lavoro.  Per ogni fase del \glo{ciclo di vita} del software vengono individuati quelli che attualmente sono gli obiettivi che il gruppo \Gruppo{} si prefigge di raggiungere entro una data indicata. Ogni fase è suddivisa in periodi, descritti nei successivi paragrafi.\\
+Di seguito viene riportato sinteticamente lo schema generale, dove ogni periodo è concettualmente collocato all'interno della rispettiva fase:
 
 \begin{itemize}
     \item \textbf{Fase di Analisi}:
@@ -14,19 +14,17 @@ Qui sotto viene esposto sinteticamente lo schema generale, dove ogni periodo è 
         \item Periodo 2;
         \item Periodo 3;
     \end{itemize}
-    Fasi rimanenti la cui pianificazione richiede in input l'analisi critica delle fasi precenti
-                    e che quindi saranno raffinate in dettaglio a tempo debito:
-                    \begin{itemize}
+    Fasi rimanenti la cui pianificazione richiede in input l'analisi critica della fase precedente e che quindi saranno raffinate in dettaglio a tempo debito:
+                    
+    \item \textbf{Fase di Sviluppo}:
+    \begin{itemize}  
+        \item Periodo 1;
+    \end{itemize}
 
-                        \item \textbf{Fase di Sviluppo}:
-                        \begin{itemize}  
-                            \item Periodo 1;
-                        \end{itemize}
-
-                        \item \textbf{Fase di Collaudo}:
-                        \begin{itemize}        
-                            \item Periodo 1;
-                        \end{itemize}
-                \end{itemize}
+    \item \textbf{Fase di Collaudo}:
+        \begin{itemize}        
+            \item Periodo 1;
+        \end{itemize}
+        
 \end{itemize}
 
