--- a/Shared/Sweleven.sty
+++ b/Shared/Sweleven.sty
@@ -127,7 +127,7 @@
 % variabili - altro
 
 \newcommand{\Mail}{swegroup11@gmail.com}
-\newcommand{\proponente}{Imola Informatica s.p.a}
+\newcommand{\proponente}{Imola Informatica S.p.A}
 \newcommand{\committenti}{Tullio Vardanega e Riccardo Cardin}
 
 \newcommand{\RR}{Revisione dei Requisiti}
