--- a/DocumentiEsterni/PianoDiProgetto/src/ModelloSviluppo/main.tex
+++ b/DocumentiEsterni/PianoDiProgetto/src/ModelloSviluppo/main.tex
@@ -1,6 +1,6 @@
 \subsection{Scelta del modello}\label{sec:Scelta-modello}
 \input{src/ModelloSviluppo/src/SceltaModello.tex}
-
+\newpage
 \subsection{Motivazioni della scelta}\label{sec:Motivazioni}
 \input{src/ModelloSviluppo/src/Motivazioni.tex}
 
