--- a/DocumentiEsterni/PianoDiProgetto/src/ModelloSviluppo/src/SceltaModello.tex
+++ b/DocumentiEsterni/PianoDiProgetto/src/ModelloSviluppo/src/SceltaModello.tex
@@ -1,10 +1,10 @@
-Il gruppo \Gruppo{} ha deciso di pianificare il lavoro seguendo il modello di sviluppo incrementale.
+Il gruppo \Gruppo{} punta a sviluppare un piano di lavoro che sia conforme al modello incrementale sebbene la mancanza di esperienza possa essere un fattore limitante nella corretta applicazione dei principi previsti da tale modello.
 
 \subsection{Descrizione}
 La scelta di un modello di sviluppo porta dei vincoli sulla pianificazione e sulla gestione del progetto.
 L’obiettivo del gruppo è di abbinare qualità al modello scelto, in modo da ottenere conformità con
 gli obiettivi del modello nel progetto e maturità nei processi.
-Il gruppo ha optato di scegliere il modello incrementale per il \glo{ciclo di vita} del software per i seguenti
+Il gruppo vorrebbe raggiungere un modello di sviluppo di tipo incrementale per il \glo{ciclo di vita} del software per i seguenti
 motivi:
 \begin{itemize}
     \item Può produrre valore ad ogni incremento, aiutando a fissare meglio i requisiti per gli incrementi
@@ -15,17 +15,19 @@ motivi:
 
 
 
+
+
 Nel modello incrementale i requisiti vengono classificati in base alla loro importanza strategica. In
 questo modo quelli più importanti vengono trattati prima. Questo ne aumenta la chiarezza e la
 facilità di soddisfazione. I requisiti meno importanti invece vengono soddisfatti dopo quelli più
 importanti venendo cosi inseriti in un sistema già stabilizzato.
 Il metodo di lavoro sarà quindi questo:
 \begin{itemize}
-    \item In ogni fase di lavoro vengono prefissati degli incrementi che devono essere prodotti entro un
+    \item In ogni fase di lavoro vengono prefissati degli incrementi che devono essere prodotti entro una data di
     scadenza decisa dal gruppo;
     \item Il lavoro viene diviso tra i membri del gruppo;
-    \item Al termine del periodo prefissato una riunione servirà per analizzare il lavoro svolto da ogni
-    membro, riscontrare problemi e difficoltà;
+    \item Al termine del periodo prefissato i membri del gruppo si riuniranno per analizzare il lavoro svolto da ogni
+    componente, segnalando eventuali problemi o difficoltà;
     \item Sarà compito dei verificatori controllare il lavoro svolto dagli altri membri del gruppo e sollevare
     eventuali incongruenze o errori;
     \item Alla fine di questa \glo{verifica} seguirà una nuova discussione di gruppo per stabilire se gli obiettivi
