--- a/DocumentiEsterni/PianoDiProgetto/src/Pianificazione/src/Stadio3.tex
+++ b/DocumentiEsterni/PianoDiProgetto/src/Pianificazione/src/Stadio3.tex
@@ -1,5 +1,5 @@
-       \subsubsection{Periodo 1 fase di progettazione}
-        Una volta approvati i \glo{requisiti} di ingresso da parte del team, in seguito all'aggiudicazione ufficale del capitolato, il gruppo procede verso la \glo{fase} progettuale. Appoggiandosi all'\AdR{}, in questo primo periodo di tale fase lo scopo principale è definire e preparare tutti gli aspetti preliminari allo sviluppo vero e proprio, avviando così la progettazione architetturale del prodotto.
+       \subsubsection{Periodo 1 - Fase di progettazione}
+        Una volta approvati i \glo{requisiti} di ingresso da parte del team in seguito all'aggiudicazione ufficale del capitolato, il gruppo procede verso la \glo{fase} progettuale. In questo primo periodo viene effettuata un'analisi critica del lavoro svolto. Lo scopo principale prevede la definizione degli aspetti preliminari associati allo sviluppo dell'applicazione. Inoltre si procede con la valutazione e la definizione della \glo{technology baseline}. Vengono così poste le basi per intraprendere una prima progettazione del prodotto.
         \begin{itemize}
                 \item \textbf{intervallo: } 25 gennaio 2021 - 8 febbraio 2021;
                 \item  \textbf{Figure professionali coinvolte}
@@ -7,17 +7,18 @@
                     \item responsabile;
                     \item amministratore;
                     \item progettista;
+                    \item analista;
                     \item verificatore.
                 \end{itemize}
                 \item \textbf{Obiettivi}
                 \begin{itemize}
-                    \item valutazione critica eventuali rischi riscontrati o con alta probabilità che si riscontrino;
+                    \item valutazione critica di eventuali rischi riscontrati o con alta probabilità che si riscontrino;
                     \item correzione della documentazione;
-                    \item finalizzazione dell'AdR ancora troppo grezza, in modo da avere almeno la quasi totalità dei requisiti chiari;
+                    \item ristrutturazione e correzione dell'\AdR;
                     \item valutazione delle componenti e tecnologie richieste:
                     \begin{itemize}
-                        \item valutazione della fattibilità effettiva dell'utilizzo di tecnologia \glo{RFID};
-                        \item contattare proponente in merito a blockchain e NFC;
+                        \item valutazione della fattibilità effettiva dell'utilizzo della tecnologia \glo{RFID};
+                        \item contattare il proponente per alcuni chiarimenti in merito a \glo{blockchain} e \glo{NFC};
                     \end{itemize}
 
                     \item aggiornamento della documentazione.
@@ -26,9 +27,9 @@
         \end{itemize}
 
 
-            \subsubsection{Periodo 2 fase di progettazione}
+            \subsubsection{Periodo 2 - Fase di progettazione}
         
-            Da qui in poi si entra nella parte più specifica di costruzione del sistema. Questo periodo ultima la fase di progettazione e si avvia verso la fase di sviluppo. Viene quindi prodotta una prima stesura del codice con lo scopo di mettere insieme un iniziale prototipo stabile del sistema, avente le minime funzionalità essenziali e basilari. La sua conclusione corrisponde di fatto alla seconda \glo{milestone} principale che il gruppo \Gruppo{} intende rispettare, ovvero la Revisione di Progettazione, in vista dell'incontro di revisione programmato.
+            Vengono studiate le tecnologie concordate col proponente e la loro applicabilità al fine dello sviluppo dell'applicazione, analizzandone le relative interazioni.
     
             \begin{itemize}
                 \item \textbf{intervallo: }9 febbraio 2021 - 23 febbraio 2021;
@@ -43,16 +44,15 @@
     
                 \item \textbf{Obiettivi}  
                             \begin{itemize}
-                                \item scelta effettiva tecnologie rischieste a implementare requisiti obbligatori e critici coinvolti in questa fase;
-                                \item studio tecnologie coinvolte nel \glo{PoC}
-                                \item progettazione concettuale dell'architettura del sistema(technology baseline);
-                                \item definizione primi incrementi di sviluppo secondo i criteri di necessità, tipologia e quindi priorità dei requisiti;
+                                \item scelta effettiva delle tecnologie richieste per implementare i requisiti obbligatori e critici;
+                                \item studio delle tecnologie coinvolte nel \glo{PoC};
+                                \item definizione primi incrementi di sviluppo secondo i criteri di necessità, tipologia e quindi priorità dei requisiti.
                             \end{itemize}
                 \end{itemize}          
             
-                \subsubsection{Periodo 3 fase di progettazione}
+                \subsubsection{Periodo 3 - Fase di progettazione}
         
-                Da qui in poi si entra nella parte più specifica di costruzione del sistema. Questo periodo ultima la fase di progettazione e si avvia verso la fase di sviluppo. Viene quindi prodotta una prima stesura del codice con lo scopo di mettere insieme un iniziale prototipo stabile del sistema, avente le minime funzionalità essenziali e basilari. La sua conclusione corrisponde di fatto alla seconda \glo{milestone} principale che il gruppo \Gruppo{} intende rispettare, ovvero la Revisione di Progettazione, in vista dell'incontro di revisione programmato.
+                Da qui in poi si entra nella parte più specifica di costruzione del sistema. Viene quindi prodotta una prima stesura del codice con lo scopo di costruire un Proof of Concept che utilizzi le tecnologie scelte.
         
                 \begin{itemize}
                     \item \textbf{intervallo: }24 febbraio 2021 - 10 marzo 2021;
