--- a/DocumentiInterni/Verbali/verbale_I_2021-01-29/src/Comandi.tex
+++ b/DocumentiInterni/Verbali/verbale_I_2021-01-29/src/Comandi.tex
@@ -1,12 +1,12 @@
 \newcommand{\Titolo}{Verbale interno del 2021-01-29}
 
-\newcommand{\Approvatore}{Giovanni Grigoletto}
+\newcommand{\Approvatore}{Edoardo Caregnato}
 \newcommand{\Redattori}{Elvis Murtezan}
 \newcommand{\Verificatori}{Filippo Pinton}
 
 \newcommand{\pathimg}{../../../Shared/logo.png}
 
-\newcommand{\Versionedoc}{0.0.1}
+\newcommand{\Versionedoc}{1.0.0}
 
 \newcommand{\Distribuzione}{Prof. Tullio Vardanega \newline Prof. Riccardo Cardin \newline Sweleven}
 
