--- a/DocumentiInterni/Verbali/verbale_I_2021-01-29/src/RegistroModifiche.tex
+++ b/DocumentiInterni/Verbali/verbale_I_2021-01-29/src/RegistroModifiche.tex
@@ -13,6 +13,8 @@
         % usare \responsabile per indicare responsabile
 
         %		L'ultimo evento deve essere sempre all'inizio della tabella
-        0.0.1                  & 2021-01-29                                      & stesura                            & Elvis Murtezan & \redattore{}    \\
+        1.0.0                  & 2021-02-12                                      & Approvazione                               & Edoardo Caregnato & \responsabile{} \\
+        0.1.0                  & 2021-02-04                                      & Verifica                                    & Filippo Pinton & \verificatore{} \\
+        0.0.1                  & 2021-01-29                                      & Stesura verbale                            & Elvis Murtezan & \redattore{}    \\
     \end{longtable}
 }
