--- a/DocumentiInterni/Verbali/verbale_I_2021-01-29/src/Informazioni/src/OrdineDelGiorno/main.tex
+++ b/DocumentiInterni/Verbali/verbale_I_2021-01-29/src/Informazioni/src/OrdineDelGiorno/main.tex
@@ -1,7 +1,7 @@
 \begin{enumerate}
-    \item discussione correzzioni da apportare alla documentazione.
-    \item discussione problemi riscontrati nella fase da migliorare.
-    \item pianificazione fase di progettazione
-    \item suddivisione dei compiti
-    \item definizione tecnologie da utilizzare
+    \item discussione correzioni da apportare alla documentazione;
+    \item discussione problemi riscontrati nella fase da migliorare;
+    \item pianificazione fase di progettazione;
+    \item suddivisione dei compiti;
+    \item definizione tecnologie da utilizzare.
 \end{enumerate}
