--- a/DocumentiEsterni/Verbali/Verbale_E_2021_02_18/src/Comandi.tex
+++ b/DocumentiEsterni/Verbali/Verbale_E_2021_02_18/src/Comandi.tex
@@ -1,8 +1,8 @@
 \newcommand{\Titolo}{Verbale esterno del 2021-02-18}
 
-\newcommand{\Approvatore}{}
+\newcommand{\Approvatore}{Elvis Murtezan}
 \newcommand{\Redattori}{Andrea De Tomasi}
-\newcommand{\Verificatori}{}
+\newcommand{\Verificatori}{Edoardo Caregnato}
 
 \newcommand{\pathimg}{../../../Shared/logo.png}
 
