--- a/DocumentiEsterni/Verbali/Verbale_E_2021_02_18/src/TracciamentoDecisioni/main.tex
+++ b/DocumentiEsterni/Verbali/Verbale_E_2021_02_18/src/TracciamentoDecisioni/main.tex
@@ -1,6 +1,6 @@
 \begin{enumerate}
-    \item usare solo NFC per il momento;
-    \item è possibile usare una prenotazione non prenotata, creando una prenotazione "istantanea"
-    \item è possibile prenotare più postazioni o intere stanze;
-    \item una prenotazione viene cancellata se non ci si presenta entro un certo periodo di tempo.
+    \item utilizzo della sola tecnologia NFC, previa possibilità di futura ri-considerazione;
+    \item possibilità di utilizzo di una postazione non prenotata, creando appunto la già discussa prenotazione "istantanea";
+    \item possibilità di prenotazione di più postazioni o di intere stanze;
+    \item funzionalità di cancellazione di una prenotazione nel caso in cui l'utente non si presenti entro un certo periodo di tempo.
 \end{enumerate}
