--- a/DocumentiInterni/Verbali/Verbale_I_2021-03-06/src/Comandi.tex
+++ b/DocumentiInterni/Verbali/Verbale_I_2021-03-06/src/Comandi.tex
@@ -1,12 +1,12 @@
 \newcommand{\Titolo}{Verbale interno del 2021-03-06}
 
-\newcommand{\Approvatore}{}
+\newcommand{\Approvatore}{Edoardo Caregnato}
 \newcommand{\Redattori}{Abdelwahad Kandoul}
-\newcommand{\Verificatori}{}
+\newcommand{\Verificatori}{Andrea De Tomasi}
 
 \newcommand{\pathimg}{../../../Shared/logo.png}
 
-\newcommand{\Versionedoc}{0.0.1}
+\newcommand{\Versionedoc}{1.0.0}
 
 \newcommand{\Distribuzione}{Prof. Tullio Vardanega \newline Prof. Riccardo Cardin \newline Sweleven}
 
