--- a/DocumentiInterni/Verbali/Verbale_I_2021-03-06/src/RegistroModifiche.tex
+++ b/DocumentiInterni/Verbali/Verbale_I_2021-03-06/src/RegistroModifiche.tex
@@ -13,6 +13,8 @@
         % usare \responsabile per indicare responsabile
 
         %		L'ultimo evento deve essere sempre all'inizio della tabella
-        0.0.1                  & 2021-03-06                                      & stesura                            & Abdelwahad Kandoul & \redattore{}    \\
+        1.0.0                   & 2021-03-08                                    & Approvazione          & Edoardo Caregnato         & \responsabile{} \\
+        0.1.0                   & 2021-03-07                                    & Verifica              & Andrea De Tomasi & \verificatore{} \\
+        0.0.1                  & 2021-03-06                                      & Stesura verbale                             & Abdelwahad Kandoul & \redattore{}    \\
     \end{longtable}
 }
