--- a/DocumentiInterni/Verbali/Verbale_I_2021-03-06/src/TracciamentoDecisioni/main.tex
+++ b/DocumentiInterni/Verbali/Verbale_I_2021-03-06/src/TracciamentoDecisioni/main.tex
@@ -1,8 +1,16 @@
+Durante questo meeting si è cercato di satbilire alcune piccolezze riguardo i documenti, e di mostrare mostrare il funzionamento del \glo{PoC}, sia la parte back-end, sia l'applicazione Android.
+I punti toccati sono i seguenti:
 \begin{itemize}
-   \item discussione sulle modifiche dell'Analisi dei requisiti;
-   \item discussione sugli aggiornamenti delle Norme di progetto;
-   \item discussione sugli aggiornamenti del Piano di qualifica;
-   \item discussione sugli aggiornamenti del Piano di progetto;
-   \item aggiornamento back-end e fron-tend del Poc;
-   \item divisione dei ruoli sulla presentazione con il proponente;
+   \item discussione su:
+   \begin{itemize}
+      \item modifiche dell'Analisi dei requisiti;
+      \item aggiornamenti delle Norme di progetto;
+      \item aggiornamenti del Piano di qualifica;
+      \item aggiornamenti del Piano di progetto.
+   \end{itemize}
+\item presentato e spiegato il funzionamento del back-end e delle tecnologie utilizzate;
+\item presentata la documentazione compilata automaticamente dal codice sorgente per chiamare le api \glo{REST} esposte dal back-end;
+\item presentato il funzionamento delle tecnologie utilizzate dall'app Android;
+\item suddivizione delle tecnologie da esporre alla presentazione pre la Technology Baseline.
 \end{itemize}
+
