--- a/DocumentiEsterni/PianoDiProgetto/src/Pianificazione/main.tex
+++ b/DocumentiEsterni/PianoDiProgetto/src/Pianificazione/main.tex
@@ -13,8 +13,10 @@ Nella pianificazione vengono definiti tutti i passi necessari alla conclusione d
 
 \subsection{Fase di Progettazione}\label{Progettazione}
 \input{src/Pianificazione/src/Stadio3.tex}
-\subsection{Diagramma di Gantt delle attività della fase di Analisi}\label{sec:Gant Analisi}
-\input{src/Pianificazione/src/GanttAnalisi.tex}
+\newpage
+\subsection{Diagramma di Gantt delle attività della fase di Progettazione}
+\label{sec:Gant Progettazione}
+%\input{src/Pianificazione/src/GanttAnalisi.tex}
     
 \subsection{Fase di Sviluppo}\label{sec:Sviluppo}
 \input{src/Pianificazione/src/Stadio5.tex}
