--- a/DocumentiEsterni/PianoDiProgetto/src/Pianificazione/src/Stadio3.tex
+++ b/DocumentiEsterni/PianoDiProgetto/src/Pianificazione/src/Stadio3.tex
@@ -29,7 +29,7 @@
 
             \subsubsection{Periodo 2 - Fase di progettazione}
         
-            Vengono studiate le tecnologie concordate col proponente e la loro applicabilità al fine dello sviluppo dell'applicazione, analizzandone le relative interazioni.
+            Vengono studiate le tecnologie proposte e la loro applicabilità al fine del futuro sviluppo del prodotto, analizzandone le relative interazioni.
     
             \begin{itemize}
                 \item \textbf{intervallo: }9 febbraio 2021 - 23 febbraio 2021;
@@ -45,14 +45,14 @@
                 \item \textbf{Obiettivi}  
                             \begin{itemize}
                                 \item scelta effettiva delle tecnologie richieste per implementare i requisiti obbligatori e critici;
-                                \item studio delle tecnologie coinvolte nel \glo{PoC};
+                                \item studio delle tecnologie scelte coinvolte nel \glo{PoC};
                                 \item definizione primi incrementi di sviluppo secondo i criteri di necessità, tipologia e quindi priorità dei requisiti.
                             \end{itemize}
                 \end{itemize}          
             
                 \subsubsection{Periodo 3 - Fase di progettazione}
         
-                Da qui in poi si entra nella parte più specifica di costruzione del sistema. Viene quindi prodotta una prima stesura del codice con lo scopo di costruire un Proof of Concept che utilizzi le tecnologie scelte.
+                Da qui in poi si entra nella parte più specifica di costruzione del sistema. Viene quindi prodotta una prima stesura del codice con lo scopo di costruire un \glo{Proof of Concept} che utilizzi le tecnologie scelte.
         
                 \begin{itemize}
                     \item \textbf{intervallo: }24 febbraio 2021 - 10 marzo 2021;
@@ -69,8 +69,7 @@
                     \item \textbf{Obiettivi}
 
                                 \begin{itemize}
-                                    \item implementazione parziale infrastruttura a supporto degli incrementi definiti da sviluppare in questa fase;
-                                    \item implementazione incrementi definiti nel periodo 2 si veda la\hypersetup{
+                                    \item implementazione degli incrementi definiti nel periodo 2 si veda la\hypersetup{
                                         linkcolor=blue
                                     }
                                     \hyperlink{TabellaIncrementi}{tabella degli incrementi} in appendice;
