--- a/DocumentiEsterni/Verbali/Verbale_E_2021_02_18/src/RegistroModifiche.tex
+++ b/DocumentiEsterni/Verbali/Verbale_E_2021_02_18/src/RegistroModifiche.tex
@@ -13,8 +13,8 @@
         % usare \responsabile per indicare responsabile
 
         %		L'ultimo evento deve essere sempre all'inizio della tabella
-        1.0.0                  & 2021-03-09                                       & Approvazione                                & Elvis Murtezan & \redattore{} \\
-        0.1.0                  & 2021-03-08                                       & Verifica                                & Edoardo Caregnato & \redattore{} \\
+        1.0.0                  & 2021-03-09                                       & Approvazione                                & Elvis Murtezan & \responsabile{} \\
+        0.1.0                  & 2021-03-08                                       & Verifica                                & Edoardo Caregnato & \verificatore{} \\
         0.0.1                  & 2021-03-02                                       & Stesura verbale                                & Andrea De Tomasi & \redattore{} \\
     \end{longtable}
 }
